--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Chat de para auxilio em soluções e dúvidas no uso da aplicação Dat Acqu Ino.",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
